fixing data.sql and deleting initializedata